--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sib-api-v3-sdk": "^8.5.0",
     "slugify": "^1.6.0",
     "stripe": "^8.199.0",
-    "web-push": "^3.5.0"
+    "web-push": "^3.5.0",
+    "xendit-node": "^6.3.0"
   }
 }
