--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "mongoose": "^8.5.0",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "openai": "^3.3.0",
     "request": "^2.88.2",
@@ -29,5 +28,8 @@
     "stripe": "^8.199.0",
     "web-push": "^3.5.0",
     "xendit-node": "^6.3.0"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.1"
   }
 }
