--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.26.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "hnswlib-node": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "mongoose": "^8.5.0",
+    "multer": "^2.0.2",
     "nodemon": "^2.0.12",
+    "onnxruntime-node": "^1.23.2",
     "openai": "^3.3.0",
     "request": "^2.88.2",
+    "sharp": "^0.34.5",
     "sib-api-v3-sdk": "^8.5.0",
     "slugify": "^1.6.0",
     "stripe": "^8.199.0",
