--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 node_modules
 .env
 controllers/ai-image/models
+controllers/ai-image/product-db
+controllers/ai-image/product-images
+controllers/ai-image/vectors
