--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ controllers/ai-image/models
 controllers/ai-image/product-db
 controllers/ai-image/product-images
 controllers/ai-image/vectors
+controllers/ai-image/estoreids.json
